# ReadBinFile

./: CMakeLists.txt  README.md
src/: my_readBinFile.cpp  readBinFile.cpp
